
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct hostent {scalar_t__ h_addr; } ;


 struct hostent* gethostbyname (char*) ;
 long inet_addr (char*) ;

unsigned long resolve(char *host)
{
  long i;
  struct hostent *he;

  if((i=inet_addr(host))<0)
    if((he=gethostbyname(host))==((void*)0))
      return(0);
    else
      return(*(unsigned long *)he->h_addr);

  return(i);
}
